// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledText /> should renders <HelveticaText /> correctly 1`] = `
<Text
  style={
    Array [
      undefined,
      Object {
        "fontFamily": "Helvetica",
      },
    ]
  }
>
  Test
</Text>
`;

exports[`<StyledText /> should renders <MonoText /> correctly 1`] = `
<Text
  style={
    Array [
      undefined,
      Object {
        "fontFamily": "space-mono",
      },
    ]
  }
>
  Test
</Text>
`;
